<resources>
    <string name="app_name">ReceiptScan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_button_desc">Settings Button</string>
    <string name="receipts_button_desc">Receipts Button</string>
    <string name="drafts_button_desc">Drafts Button</string>
    <string name="export_button_desc">Export Button</string>
    <string name="camera_permission_ext">Scan receipts using your camera.</string>
    <string name="allow_camera_btn">Allow Access</string>
    <string name="request_camera_msg">Allow camera access.</string>
    <string name="import_image_btn">Import Image</string>
    <string name="request_storage_msg">Allow access to the external storage.</string>
    <string name="discard_receipt_message">Are you sure you want to discard this receipt?</string>
    <string name="extract_receipt_title">Discard Receipt</string>

    <string name="receipt_merchant_name_placeholder">Merchant Name</string>
    <string name="receipt_merchant_label">Merchant</string>
    <string name="receipt_date_label">Date</string>
    <string name="receipt_date_placeholder">Date</string>
    <string name="receipt_currency_label">Currency</string>
    <string name="receipt_currency_placeholder">Currency</string>
    <string name="receipt_total_label">Total</string>
    <string name="receipt_total_placeholder">Total</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="receipt">receipt</string>
    <string name="drafts_title">Drafts</string>
    <string name="drafts_text">Review your scanned receipts</string>
    <string name="toggleFlashBtn">Toggle Flash</string>
    <string name="scanner_error_msg">There was an error with the camera.</string>
    <string name="edit">edit</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_product">Add Product</string>
    <string name="category_icon">Category Icon</string>
    <string name="item_label">Item</string>
    <string name="price_label">Price</string>
    <string name="delete">Delete</string>
    <string name="search_currency">Search Currency</string>
    <string name="search">Search</string>
    <string name="category_search_title">Search Category</string>
    <string name="share_text">Text Only</string>
    <string name="share_image">Image Only</string>
    <string name="share_both">Image and Text</string>
    <string name="share_title">Chose what to share</string>
    <string name="default_currency">Default Currency</string>
    <string name="default_category">Default Category</string>
    <string name="send_receipt_opt">Send Receipt Anonymously</string>
    <string name="settings_title">Settings</string>
    <string name="exports_title">Exports</string>
    <string name="content_text_only">Text Only</string>
    <string name="content_text_and_image">Text and Image</string>
    <string name="content_csv">CSV</string>
    <string name="content_json">JSON</string>
    <string name="receipts_title">Receipts</string>
</resources>
