<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.receipt.ReceiptFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/nestedScrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/receiptBottomSpace"
                app:layout_constraintHorizontal_chainStyle="packed">

            <ImageView
                    android:layout_width="@dimen/categoryIconSize"
                    android:layout_height="@dimen/categoryIconSize"
                    tools:src="@drawable/ic_grocery"
                    android:background="@drawable/circle"
                    android:padding="15dp"
                    android:contentDescription="@string/category_icon"
                    android:id="@+id/categoryImage"
                    android:layout_marginTop="60dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="Grocery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/categoryImage" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="S.C. PROFI ROM FOOD S.R.L."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="09/03/2019"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="11.68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView9"
                    app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="RON"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    app:layout_constraintStart_toEndOf="@+id/textView8" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_chainStyle="packed"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
            />
            <TextView
                    style="@style/Receipt.Secondary.Low"
                    android:text="@string/item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"/>
            <TextView
                    style="@style/Receipt.Secondary.Low"
                    android:text="@string/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintGuide_begin="311dp"
                    android:id="@+id/guideline4"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintGuide_begin="32dp"
                    android:id="@+id/guideline5"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintGuide_end="32dp"
                    android:id="@+id/guideline6"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/washed"
                    app:layout_constraintStart_toStartOf="@id/guideline5"
                    app:layout_constraintEnd_toEndOf="@id/guideline6"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/textView14"
                    android:id="@+id/separator"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/separator" android:layout_marginTop="8dp"
                    android:id="@+id/recyclerView2"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    android:text="@string/receipt_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"/>
            <TextView
                    style="@style/Receipt.Secondary"
                    tools:text="11.68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintBottom_toBottomOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>