<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.lucianbc.receiptscan.presentation.draft.DraftViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="150dp"
                    app:layout_constraintHorizontal_chainStyle="packed">

                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        tools:src="@drawable/ic_grocery"
                        android:src="@{viewModel.category}"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:background="@drawable/circle"
                        android:padding="15dp"
                        android:contentDescription="@string/category_icon"
                        android:id="@+id/categoryImage"/>

                <TextView
                        style="@style/Receipt.Secondary"
                        android:text="@{viewModel.category.name}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Grocery"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/categoryImage"
                        android:id="@+id/textView4"/>

                <EditText
                        style="@style/Receipt.Secondary"
                        android:text="@={viewModel.merchant}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="S. C. PROFI ROM FOOD S.R.L."
                        app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:id="@+id/merchantText"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        tools:targetApi="o"/>

                <TextView
                        style="@style/Receipt.Secondary"
                        android:text="@{viewModel.date}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="09/03/2019"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/merchantText" android:id="@+id/dateText"/>
                <EditText
                        style="@style/Receipt.Primary"
                        android:text="@={viewModel.total}"
                        android:inputType="numberDecimal"
                        tools:text="11.68"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/priceText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/currencyText"
                        app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dateText"
                        android:importantForAutofill="no"
                        tools:targetApi="o" tools:ignore="LabelFor"/>
                <TextView
                        style="@style/Receipt.Primary"
                        android:text="@{viewModel.currency}"
                        tools:text="RON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/currencyText"
                        app:layout_constraintStart_toEndOf="@+id/priceText" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_chainStyle="packed"
                        android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/priceText"/>
                <androidx.constraintlayout.widget.Guideline
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:layout_constraintGuide_begin="376dp"
                        android:id="@+id/guideline"/>
                <androidx.constraintlayout.widget.Guideline
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:layout_constraintGuide_begin="32dp"
                        android:id="@+id/guideline2"/>
                <androidx.constraintlayout.widget.Guideline
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/guideline3"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintGuide_end="32dp"/>
                <TextView
                        style="@style/Receipt.Secondary.Low"
                        android:text="@string/item_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toTopOf="@+id/guideline"/>
                <TextView
                        style="@style/Receipt.Secondary.Low"
                        android:text="@string/price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"/>

                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/washed"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView11" android:id="@+id/view"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/draftItems"
                        android:overScrollMode="never"
                        android:nestedScrollingEnabled="false"
                        app:layout_constraintTop_toTopOf="@+id/view"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        tools:listitem="@layout/editable_item_layout"
                        tools:itemCount="3"
                />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:layout_marginTop="16dp"
                        android:tint="@color/washed"
                        android:background="?android:selectableItemBackground"
                        app:layout_constraintTop_toBottomOf="@+id/draftItems"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:layout_marginStart="8dp" tools:ignore="ContentDescription"
                        android:id="@+id/addProductBtn"/>
                <TextView
                        style="@style/Receipt.Secondary"
                        android:text="@string/receipt_total_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/addProductBtn"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"/>
                <EditText
                        style="@style/Receipt.Secondary"
                        android:text="@={viewModel.total}"
                        tools:text="11.68"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondaryPriceText"
                        android:inputType="numberDecimal"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        android:importantForAutofill="no"
                        tools:targetApi="o" tools:ignore="LabelFor"/>
                <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp" app:srcCompat="@drawable/ic_edit_24dp"
                        android:id="@+id/editDateBtn"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:padding="0dp"
                        app:layout_constraintStart_toEndOf="@+id/dateText"
                        app:layout_constraintBottom_toBottomOf="@+id/dateText"
                        app:layout_constraintTop_toTopOf="@+id/dateText" tools:ignore="ContentDescription"/>
                <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp" app:srcCompat="@drawable/ic_edit_24dp"
                        android:id="@+id/editCurrencyBtn"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:padding="0dp"
                        tools:ignore="ContentDescription"
                        app:layout_constraintBottom_toBottomOf="@+id/currencyText"
                        app:layout_constraintTop_toTopOf="@+id/currencyText"
                        app:layout_constraintStart_toEndOf="@+id/currencyText"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:contentInsetStart="0dp"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="3"
                    android:layout_height="56dp"
            >
                <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:tint="@color/black"
                        android:id="@+id/deleteBtn"
                        tools:ignore="ContentDescription"/>

                <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:src="@drawable/ic_receipt_black_24dp"
                        android:tint="@color/black"
                        android:id="@+id/imageBtn"
                        tools:ignore="ContentDescription"/>

                <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:src="@drawable/ic_check_black_24dp"
                        android:tint="@color/black"
                        android:id="@+id/saveBtn"
                        tools:ignore="ContentDescription"/>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>